Sticky Position: Fix top position while logged in on mobile

--- a/packages/block-library/src/group/style.scss
+++ b/packages/block-library/src/group/style.scss
@@ -2,3 +2,14 @@
 	// This block has customizable padding, border-box makes that more predictable.
 	box-sizing: border-box;
 }
+
+// To support sticky positioning, reset the admin bar height to 0px on mobile devices.
+// This is required because the admin bar is not fixed to the top on mobile devices,
+// but is on viewports larger than 600px.
+@media screen and (max-width: 600px) {
+	.wp-block-group.is-position-sticky {
+		/* stylelint-disable length-zero-no-unit */
+		--wp-admin--admin-bar--height: 0px; // 0px is set explicitly so that it can be used in a calc value.
+		/* stylelint-enable length-zero-no-unit */
+	}
+}
